--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ management.port=8081
 # disable all management endpoints except health
 endpoints.enabled = false
 endpoints.health.enabled = true
+
+security.user.name=user
+security.user.password=password
